[package]
name = "mock_map_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openlr = { path = "../openlr" }
url = "2.3.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log="0.4.17"
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0"
geo= { version = "0.22.0", features = ["use-proj"] }
async-trait = "0.1.62"
prost = "0.10.4"
tonic = "0.7.2"

[build-dependencies]
tonic-build = "0.7.2"
